--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "TodoCore",
-  "version": "1.0.0",
-  "description": "all the rules for a Todo App",
-  "main": "/dist/index.js",
-  "repository": "git@github.com:TramontaG/TodoCore.git",
-  "author": "TramontaG",
-  "license": "MIT",
-  "private": false,
-  "dependencies": {
-    "typescript": "^4.5.5"
-  }
+	"name": "TodoCore",
+	"version": "1.0.0",
+	"description": "all the rules for a Todo App",
+	"main": "/dist/index.js",
+	"repository": "git@github.com:TramontaG/TodoCore.git",
+	"author": "TramontaG",
+	"license": "MIT",
+	"private": false,
+	"dependencies": {
+		"@types/react": "^17.0.39",
+		"typescript": "^4.5.5",
+		"@types/node": "^16.7.13",
+		"@types/react-dom": "^17.0.9"
+	},
+	"peerDependencies": {
+		"react": "^17.0.2"
+	}
 }
