--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
 	"license": "MIT",
 	"private": false,
 	"dependencies": {
-		"@types/react": "^17.0.39",
-		"typescript": "^4.5.5",
 		"@types/node": "^16.7.13",
-		"@types/react-dom": "^17.0.9"
+		"@types/react": "^17.0.39",
+		"@types/react-dom": "^17.0.9",
+		"git": "^0.1.5",
+		"typescript": "^4.5.5"
+	},
+	"scripts": {
+		"build": "rollup -c"
 	},
 	"peerDependencies": {
 		"react": "^17.0.2"
+	},
+	"devDependencies": {
+		"rollup": "^2.26.11",
+		"rollup-plugin-commonjs": "^10.1.0",
+		"rollup-plugin-node-resolve": "^5.2.0",
+		"rollup-plugin-peer-deps-external": "^2.2.3",
+		"rollup-plugin-typescript2": "^0.27.2"
 	}
 }
